CSS: Fixed page spill by placing feltBackground into grid column span

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,17 +48,16 @@
 
 .feltCardBackground{
     display: grid;
-    grid-row: 1;
+    grid-row: 1 / span 4;
     grid-column: 1 / span 2;
     z-index: -3;
     background-color: rgba(0, 0, 0, 0.678);
     border: 1px dotted rgb(112, 4, 4);
     padding: 1rem;
-    width: 100%;
-    height: 810px;
+    width: 105%;
     margin-left: 1rem;
     margin-top: -1rem;
-    margin-bottom: 1rem;
+    margin-bottom: -3rem;
     box-shadow: 0px 1px 1px rgb(0, 0, 0), 0px 1px 12px rgb(134, 44, 44) inset;
     border-top: 1px solid rgb(155, 41, 41);
 }
